Add postinstall script for faster startup

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js"
+        "postinstall": "npm ci --production"
     },
     "dependencies": {
         "express": "^4.18.2",
